src/test/deca/syntax/valid/extension/ArrayOfObjects.deca
class A{

}

{
	A[][] tabObjects = new A[4][];
	tabObjects = new A[10][25];
	tabObjects[9][10] = new A();
}