src/test/deca/syntax/invalid/extension/MissOneAllocationArray.deca
{
	int[][] mat = new int[10][];


}